trunk/Archive2/87/c76280850c3e91/output
main.cpp: In instantiation of 'void C::add(T) [with T = std::vector<int>]':
main.cpp:25:9:   required from 'C::C(T&& ...) [with T = {const std::vector<int, std::allocator<int> >&}]'
main.cpp:60:11:   required from here
main.cpp:43:31: error: 'class std::vector<int>' has no member named 'get'
     void add(T r) { std::cout << r.get() << std::endl; }
                               ^
